--- a/BACON Drohnentest.ipynb
+++ b/BACON Drohnentest.ipynb
@@ -47,10 +47,10 @@
     "\n",
     "#Druckhänderung Hochflug1 (Ausschnitt: 3,53 bis 56m) (Null macht Probleme)\n",
     "#Höhe (Meter)\n",
-    "#x = np.array([3.53, 7.06, 10.59, 14.12, 17.65, 21.18, 24.71, 28.24, 31.76, 35.29, 38.82, 42.35, 45.88, 49.41, 52.94, 56.47])\n",
+    "x = np.array([3.53, 7.06, 10.59, 14.12, 17.65, 21.18, 24.71, 28.24, 31.76, 35.29, 38.82, 42.35, 45.88, 49.41, 52.94, 56.47])\n",
     "#Luftdruck\n",
-    "#y = np.array([95.89, 95.81, 95.74, 95.65, 95.58, 95.51, 95.44, 95.36, 95.3, 95.22, 95.15, 95.07, 95, 94.93, 94.85, 94.78])\n",
-    "#z = 1\n",
+    "y = np.array([95.89, 95.81, 95.74, 95.65, 95.58, 95.51, 95.44, 95.36, 95.3, 95.22, 95.15, 95.07, 95, 94.93, 94.85, 94.78])\n",
+    "z = 1\n",
     "\n",
     "#Druckhänderung Hochflug2 (Ausschnitt: 20,69 bis 86,9m)\n",
     "#Höhe (Meter)\n",
@@ -61,10 +61,10 @@
     "\n",
     "#Temperaturänderung Hochflug1 (vollständig, ohne Null, weil macht Probleme) \n",
     "#Höhe (Meter)\n",
-    "x = np.array([3.53, 7.06, 10.59, 14.12, 17.65, 21.18, 24.71, 28.24, 31.76, 35.29, 38.82, 42.35, 45.88, 49.41, 52.94, 56.47, 60, 63.53, 67.06, 70.59, 74.12, 77.65, 81.18, 84.71, 88.24, 91.76, 95.29, 98.82, 102.35, 105.88, 109.41, 112.94, 116.47, 120])\n",
+    "#x = np.array([3.53, 7.06, 10.59, 14.12, 17.65, 21.18, 24.71, 28.24, 31.76, 35.29, 38.82, 42.35, 45.88, 49.41, 52.94, 56.47, 60, 63.53, 67.06, 70.59, 74.12, 77.65, 81.18, 84.71, 88.24, 91.76, 95.29, 98.82, 102.35, 105.88, 109.41, 112.94, 116.47, 120])\n",
     "#Temperatur\n",
-    "y = np.array([16.22, 16.07, 15.92, 15.82, 15.77, 15.69, 15.56, 15.38, 15.25, 15.07, 14.92, 14.74, 14.58, 14.4, 14.24, 14.08, 13.83, 13.67, 13.52, 13.38, 13.23, 13.16, 13.05, 12.94, 12.79, 12.67, 12.55, 12.44, 12.36, 12.28, 12.18, 12.07, 12.02, 11.91])\n",
-    "z = 3\n",
+    "#y = np.array([16.22, 16.07, 15.92, 15.82, 15.77, 15.69, 15.56, 15.38, 15.25, 15.07, 14.92, 14.74, 14.58, 14.4, 14.24, 14.08, 13.83, 13.67, 13.52, 13.38, 13.23, 13.16, 13.05, 12.94, 12.79, 12.67, 12.55, 12.44, 12.36, 12.28, 12.18, 12.07, 12.02, 11.91])\n",
+    "#z = 3\n",
     "\n",
     "if (z == 1):\n",
     "    y = -y + 95.96\n",
